--- a/util/helpers/generals.styl
+++ b/util/helpers/generals.styl
@@ -1,5 +1,14 @@
+html
+	min-height 100%
+
+body
+	margin 0
+	font-size $font-size-base
+	font-family $font-family-base
+	min-height inherit
+
 .w100vw
 	width 100vw
 
 .fw
-	width 100%	
+	width 100%
